# rust-by-challenge

./: Cargo.toml  README.md  challenge_02_guessing_game.md
challenges/01_hello_rust/: 01_hello_rust.md
challenges/01_hello_rust/hello_rust/src/: main.rs
challenges/03_ownership_puzzle_and_lifetimes_puzzle/: 03_ownership_puzzle.md  03_ownership_puzzle_and_lifetimes_puzzle.md
challenges/03_ownership_puzzle_and_lifetimes_puzzle/lifetimes_puzzle/: Cargo.toml
challenges/03_ownership_puzzle_and_lifetimes_puzzle/lifetimes_puzzle/src/: main.rs
challenges/03_ownership_puzzle_and_lifetimes_puzzle/ownership_puzzle/: Cargo.toml
challenges/03_ownership_puzzle_and_lifetimes_puzzle/ownership_puzzle/src/: main.rs
challenges/05_categorise_a_thing/: challenge_05_categorise_a_thing.md
challenges/05_categorise_a_thing/categorise_a_thing/: Cargo.toml
guessing_game/src/: main.rs
